Adds missing kBlockingAndPassive case to TouchpadFlingScroll

While debugging an issue for Oculus Browser I hit the NOTREACHED case in TouchpadFlingScroll on tmz.com.  This causes a crash in debug builds.  Oculus Browsers gestures flings are based on vr_input_manager, so this likely applies to vr_shell as well.

BUG=708236

Review-Url: https://codereview.chromium.org/2793403002
Cr-Commit-Position: refs/heads/master@{#462541}

Former-commit-id: 742bb98afe29eff3d693328bc39a62f680f83a1d